@@ -16,7 +16,7 @@
             {
                 // Create and init an instance
                 var tinyC5 = new TinyC5( { scale: 2, container: document.getElementById( 'tinyC5_container' ), title: 'TV Noise - TinyC5 Example #01' } );
-                
+
                 // Create larger backBuffer
                 var backBuffer = new Array( 960 * 600 * 4 );
                 
